1.55v

Features:
1. Total pageviews tracking - pageviews during all the visits
2. Visits counting.
3. Option to set, after how many hours pro active chat message should be shown again.
4. Previous users chats in chat tab window.
5. How many times proactive chat message logic was applied counter.
6. User browsing information in chat window.

execute doc/update_db/update_38.sql

1.54v

Features:
1. Option to turn off or on Resume chat functionality.
2. Reopen chat permission in back office.
3. If chat is closed operator won't be able to send messages untill it's reopened. What user reopened the chat also is logged.

Bugfixes:
1. Footprint was not detected if chat was started from proactive chat message.
2. Messages scroll was lost sometimes during tab's switching.
3. Don't blink title if textarea is active.

execute doc/update_db/update_37.sql

1.53v

Features

1. Option for user to send chat transcript to his e-mail.
2. User options as dropdown menu.
3. User status icon in tab.

execute doc/update_db/update_36.sql

1.52v

Features, sponsored release:

Auto responder.
a. Auto responder in proactive chat invitations.
b. Independent responder.

This allow you to have the following workflow.
1. Then users starts chat. He receives preconfigured message. E.g. "one moment please..."
2. If the agent doesn’t accept within a time period (e.g. 1 minute) to user is send message. "we are currenty busy with another patient right now, can you leave your name and email and we will follow up"

execute doc/update_db/update_35.sql

1.51v

Features:
1. Half spornsored kernel export module. Tutorial will be available on the site.

Changes, Bugfixes:
1. SSL support for desktop client. Just enter URL with https
2. Allow reopen chat if it does not have any messages.
3. If user is chatting do not show proactive message.
4. Just proper JSON support check. Avoids conflict with third party libraries.
5. Mark proactive message as seen during chat starting process.
